# PokeScouter

./: .gitignore  CLAUDE.md  README.md  dev.bat
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: damage.py  devtools.py  devtools_models.py  health.py  item.py  move.py  nash.py  optimize.py  parties.py  pokemon.py  settings.py
backend/app/damage/: __init__.py  client.py  stat_estimator.py
backend/app/data/: game_data.py  names.py
backend/app/ocr/: __init__.py  base.py  glm_ocr.py  manga_ocr.py  paddle_ocr.py  pipeline.py  region.py
backend/app/recognition/: __init__.py  battle_log_parser.py  field_state.py  item_ability_parser.py  move_name_matching.py  party_register.py  pokemon_matcher.py  scene_detector.py  scene_state.py  stat_modifier.py
backend/app/ws/: battle.py  match_logger.py
backend/config/: move_ocr_rules.json  regions.json  settings.example.toml
backend/tests/: conftest.py  test_ability_localization.py  test_battle_log_parser.py  test_battle_pokemon_identification.py  test_champions_sprite_fetch.py  test_field_state.py  test_game_data_fuzzy.py  test_move_detail_api.py  test_move_name_matching.py  test_ocr_engines.py  test_parse_hp_value.py  test_party_register.py  test_pokemon_display_names.py  test_scene_state.py  test_stat_estimator.py  test_stat_modifier.py  test_type_consistency.py
backend/tools/: build_base_data.py  build_faiss_index.py  capture.py  crop.py  extract_champions_diff.py  hp_experiment.py  live_ocr.py  ocr_benchmark.py  ocr_test.py  scrape_yakkun_learnsets.py
calc-service/: package-lock.json  package.json
data/: yakkun_n730.html  yakkun_zukan_offer.html
(+215 files in other folders)
